[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/button/bg.png" type="Texture" id=1]
[ext_resource path="res://menu/lobby-menu/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/button/bg_press.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/server-browser/back.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/icon/host.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/simple_dialog_option/simple_dialog_option.tscn" type="PackedScene" id=10]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/control/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 113.0

[node name="back" type="Button" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer/back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="CenterContainer" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 482.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer/margin"]
margin_left = 110.0
margin_top = 23.0
margin_right = 267.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Lobby"
align = 1
valign = 1

[node name="add_bot" type="Button" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 586.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer/add_bot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/control/VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 806.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/control/VBoxContainer/ScrollContainer"]
margin_right = 600.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -268.0
margin_top = -174.0
margin_right = 268.0
margin_bottom = -74.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="CanvasLayer/control/HBoxContainer"]
margin_left = 161.0
margin_right = 361.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/control/HBoxContainer/play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/control/HBoxContainer"]
margin_left = 365.0
margin_right = 375.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="ready" type="TextureButton" parent="CanvasLayer/control/HBoxContainer"]
visible = false
margin_left = 336.0
margin_right = 536.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/control/HBoxContainer/ready"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "Ready"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="simple_dialog_option" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="server_advertise" type="Node" parent="."]
script = ExtResource( 3 )

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/PanelContainer/HBoxContainer/add_bot" to="." method="_on_add_bot_pressed"]
[connection signal="pressed" from="CanvasLayer/control/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/control/HBoxContainer/ready" to="." method="_on_ready_pressed"]
[connection signal="on_yes" from="CanvasLayer/simple_dialog_option" to="." method="_on_simple_dialog_option_on_yes"]
[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
